FSEC DEMO/f5-cc-node2-dep.yaml
---
# Source: f5-bigip-ctlr/templates/f5-bigip-ctlr-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bigip-node2-f5-bigip-ctlr
  labels:
    app: f5-bigip-ctlr
    chart: f5-bigip-ctlr-0.0.6
    release: bigip-node2
    heritage: Tiller
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: f5-bigip-ctlr
        release: bigip-node2
    spec:
      serviceAccountName: bigip-node2-f5-bigip-ctlr
      imagePullSecrets:
        - name: f5-docker-images
        - name: bigip-login
      containers:
      - name: f5-bigip-ctlr
        image: "f5networks/k8s-bigip-ctlr:1.10.0"
        volumeMounts:
        - name: bigip-creds
          mountPath: "/tmp/creds"
          readOnly: true
        imagePullPolicy: IfNotPresent
        command:
        - /app/bin/k8s-bigip-ctlr
        args:
        - --credentials-directory
        - /tmp/creds
        - --bigip-partition
        - "kubernetes-node"
        - --bigip-url
        - "10.1.10.240"
        - --insecure
        - "true"
        - --pool-member-type
        - "NodePort"
        - --resolve-ingress-names
        - "LOOKUP"
#        - --log-level
#        - "DEBUG"
      volumes:
      - name: bigip-creds
        secret:
           secretName: bigip-login
