FSEC DEMO/nginx-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jk-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jk-nginx
  template:
    metadata:
      labels:
        app: jk-nginx
    spec:
      containers:
      - name: jk-nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
