FSEC DEMO/f5-hello-world-node-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: f5-hello-world-node
  labels:
    run: f5-hello-world-node
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  type: NodePort
  selector:
    run: f5-hello-world-node
