FSEC DEMO/frontweb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontweb
  labels:
    run: frontweb
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
  selector:
    run: frontweb
