FSEC DEMO/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jk-nginx
  labels:
    run: jk-nginx
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: jk-nginx
