FSEC DEMO/f5-ingress-demo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    virtual-server.f5.com/ip: "10.1.10.101"
    virtual-server.f5.com/partition: "kubernetes"
    virtual-server.f5.com/balance: "least-connections-node"
    virtual-server.f5.com/http-port: "80"
    virtual-server.f5.com/rewrite-target-url: "ing.f5knetwork.com/blue=ing.f5knetwork.com/,ing.f5knetwork.com/green=ing.f5knetwork.com/"
  name: rewrite-about
  namespace: default
spec:
  rules:
  - host: ing.f5knetwork.com
    http:
      paths:
      - path: /blue
        backend:
          serviceName: node-blue
          servicePort: 8080
  - host: ing.f5knetwork.com
    http:
      paths:
      - path: /green
        backend:
          serviceName: node-green
          servicePort: 80
